--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./src/app/index.js",
+    "start": "node ./src/app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
